--- a/css/application.css
+++ b/css/application.css
@@ -2,7 +2,7 @@ body {
   text-align: center;
 }
 
-.container {
+div.board {
   padding-top: 30px;
   display: flex;
   justify-content: center;
@@ -68,6 +68,11 @@ button {
   text-decoration:none;
   text-shadow:0px 0px 0px #2f6627;
 }
+
+.game-over button {
+  background-color:red;
+}
+
 button:hover {
   background-color:#5cbf2a;
 }
